# 20260624

./: .gitignore  AGENTS.md  PROJECT_STATUS.md  README.md  conversations.md  pyproject.toml  test_all_backends.py  test_browser.py  test_ddg_pw.py  test_ddgs.py  test_ddgs_queries.py  test_ddgs_rate.py  test_search_debug.py
data/: growth_report_20260625-012957.json  hist_canonical.json  hist_changelog.json  hist_url_queue.json  search_heuristics.json
data/vector_store/: chroma.sqlite3
hist/: batch_ingest.py  changelog.py  config.py  formatter.py  orchestrator.py  query_engine.py
hist/cache/: extraction_cache.py  page_cache.py
hist/extraction/: extractor.py
hist/neo4j_driver/: connect.py
hist/normalization/: normalizer.py
hist/scraper/: wikipedia.py
hist/storage/: store_nodes_edges.py
hist/url_queue/: queue.py
morphos/: agent.py  analyzer.py  cli.py  config.py  critic.py  debug_logger.py  docker_sandbox.py  dynamic_tools.py  heuristics.py  llm.py  multi_agent.py
morphos/memory/: chroma_store.py  reflector.py  working_memory.py
morphos/tools/: browser.py  (+9 more)
spec/: 001-ReAct-MVP.md  002-Memory-RAG.md  003-Critic-DynamicTools.md  004-AutonomousGrowth.md  005-OpenRouterBackend.md  006-Universal-Cognitive-Textbook.md  007-Hist-System-Scope.md  007.1-Hist-QueryTimelineUI.md  007.2-Hist-GraphViewer.md  007.3-Hist-Caching.md  008-React-Motion-UI.md  diagram1.md  morphos-spec.md  morphos.md
uct/: __init__.py  compressor.py  dimensions.py  engine.py  generator.py  graph.py  models.py  prompts.py  renderer.py  toolkit.py
webui/: hist_app.py  server.py
(+32 files in other folders)
