[project]
name = "morphos"
version = "0.1.0"
description = "Autonomous AI agent system with ReAct loop, all running locally"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "httpx",
    "requests",
    "beautifulsoup4",
    "readability-lxml",
    "rich",
    "chromadb",
    "fastapi",
    "uvicorn",
]

[project.scripts]
morphos = "morphos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
